codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ Codex Lean (v0.0.0)

  Visit https://chatgpt.com/settings/usage for up-to-date
  information on rate limits and credits

  Model:           gpt-5.1-codex (reasoning none, summaries auto)
  Directory:       [[workspace]]
  Permissions:     Custom (workspace with network access, Ask for approval)
  Agents.md:       <none>

  Token usage:     1.05K total  (700 input + 350 output)
  Context window:  100% left (1.45K used / 272K)
  5h limit:        [████████░░░░░░░░░░░░] 40% left (resets 11:32)
  Weekly limit:    [█████████████░░░░░░░] 65% left (resets 11:52)
  Warning:         limits may be stale - start new turn to refresh.
