codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ Codex Lean (v0.0.0)

  Visit https://chatgpt.com/settings/usage for up-to-date
  information on rate limits and credits

  Model:           gpt-5.1-codex (reasoning none, summaries auto)
  Directory:       [[workspace]]
  Permissions:     Custom (workspace with network access, Ask for approval)
  Agents.md:       <none>
  Account:         user@example.com (Pro 200)

  Context window:  100% left (2.2K used / 272K)
  5h limit:        [███████████░░░░░░░░░] 55% left (resets 09:25)
  Weekly limit:    [██████████████░░░░░░] 70% left (resets 09:55)
  Credits:         Available
